; ModuleID = '/home/carl/AnghaBench/linux/drivers/nvme/target/extr_core.c_nvmet_check_ana_state.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nvme/target/extr_core.c_nvmet_check_ana_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvmet_port = type { i32* }
%struct.nvmet_ns = type { i64 }

@NVME_ANA_INACCESSIBLE = common dso_local global i32 0, align 4
@NVME_SC_ANA_INACCESSIBLE = common dso_local global i32 0, align 4
@NVME_ANA_PERSISTENT_LOSS = common dso_local global i32 0, align 4
@NVME_SC_ANA_PERSISTENT_LOSS = common dso_local global i32 0, align 4
@NVME_ANA_CHANGE = common dso_local global i32 0, align 4
@NVME_SC_ANA_TRANSITION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nvmet_port*, %struct.nvmet_ns*)* @nvmet_check_ana_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nvmet_check_ana_state(%struct.nvmet_port* %0, %struct.nvmet_ns* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.nvmet_port*, align 8
  %5 = alloca %struct.nvmet_ns*, align 8
  %6 = alloca i32, align 4
  store %struct.nvmet_port* %0, %struct.nvmet_port** %4, align 8
  store %struct.nvmet_ns* %1, %struct.nvmet_ns** %5, align 8
  %7 = load %struct.nvmet_port*, %struct.nvmet_port** %4, align 8
  %8 = getelementptr inbounds %struct.nvmet_port, %struct.nvmet_port* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = load %struct.nvmet_ns*, %struct.nvmet_ns** %5, align 8
  %11 = getelementptr inbounds %struct.nvmet_ns, %struct.nvmet_ns* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = getelementptr inbounds i32, i32* %9, i64 %12
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* @NVME_ANA_INACCESSIBLE, align 4
  %17 = icmp eq i32 %15, %16
  %18 = zext i1 %17 to i32
  %19 = call i64 @unlikely(i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %2
  %22 = load i32, i32* @NVME_SC_ANA_INACCESSIBLE, align 4
  store i32 %22, i32* %3, align 4
  br label %42

23:                                               ; preds = %2
  %24 = load i32, i32* %6, align 4
  %25 = load i32, i32* @NVME_ANA_PERSISTENT_LOSS, align 4
  %26 = icmp eq i32 %24, %25
  %27 = zext i1 %26 to i32
  %28 = call i64 @unlikely(i32 %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %23
  %31 = load i32, i32* @NVME_SC_ANA_PERSISTENT_LOSS, align 4
  store i32 %31, i32* %3, align 4
  br label %42

32:                                               ; preds = %23
  %33 = load i32, i32* %6, align 4
  %34 = load i32, i32* @NVME_ANA_CHANGE, align 4
  %35 = icmp eq i32 %33, %34
  %36 = zext i1 %35 to i32
  %37 = call i64 @unlikely(i32 %36)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %41

39:                                               ; preds = %32
  %40 = load i32, i32* @NVME_SC_ANA_TRANSITION, align 4
  store i32 %40, i32* %3, align 4
  br label %42

41:                                               ; preds = %32
  store i32 0, i32* %3, align 4
  br label %42

42:                                               ; preds = %41, %39, %30, %21
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}

declare dso_local i64 @unlikely(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
